--- a/scss/pages/_whatwedo.scss
+++ b/scss/pages/_whatwedo.scss
@@ -505,6 +505,15 @@
     width: 100%;
     padding: 100px 0;
     background: var(--dark-blue-color);
+    @media (max-width: 992px) {
+        min-height: 1800px;
+    }
+    @media (max-width: 768px) {
+        min-height: 1650px;
+    }
+    @media (max-width: 575px) {
+        min-height: 1630px;
+    }
     h2{
         font-size: 33px;
         font-weight: 500;
@@ -580,7 +589,7 @@
         }
         @media (max-width: 1200px) {
             width: 100%;
-            height: 300px;
+            height: 450px;
             margin-left: 0;
         }
         &::-webkit-scrollbar{
